[package]
name = "chess_convert_pgn"
version = "0.1.0"
authors = ["Sam Goldman <sgoldman216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.8"
lazy_static = "1.4.0"
regex = "1.4.2"
clap = "2.33.3"

[build-dependencies]
flatc-rust = "0.1.3"

[profile.dev]
opt-level = 3
